--- a/style.css
+++ b/style.css
@@ -11,10 +11,6 @@
     src: url(fontes/bebas_neue/BebasNeue-Regular.otf) format('onetype'), url(fontes/bebas_neue/BebasNeue-Regular.ttf) format('truetype');
 }
 
-* { margin: 0px;
-    padding: 0px;
-}
-
 :root{
     --cor0: #c5edb6;
     --cor1: #83e1ad;
@@ -27,77 +23,66 @@
     --fonte2: 'idroid.otf', sans-serif;
 }
 
+* { margin: 0px;
+    padding: 0px;
+}
+
 body{
     font-family: var(--fonte0);
     background-color: var(--cor0);
-    line-height: 1.2em;
 }
 
 a.externo::after{
     content: '\00A0\1F517';
 }
 
-.paragrafo{
-    margin: 15px 0px;
-    text-align: justify;
-    text-indent: 30px;
-    line-height: 2em;
-    font-size: 1em;
-}
-
-iframe{
-    display: block;
-    margin-top: 30px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 30px;
-
-    }
-
 header {
-    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
-    text-align: center;
-    text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.466);
-    background-color: #063d1e;
-    padding-top: 40px;
-    min-height: 150px;
+background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+text-align: center;
+padding-top: 40px;
+min-height: 150px;
 }
 
 header > h1{
-    color: white;
-    font-family: var(--fonte1);
-    font-size: 3em;
-    margin-bottom: 20px;
+color: white;
+font-family: var(--fonte1);
+font-size: 3em;
+font-weight: normal;
+margin-bottom: 20px;
+text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.267);
 }
 
 header p {
-    color: white;
-    font-family: var(--fonte0);
-    font-size: 1.2em;
-    max-width: 500px;
-    padding-right: 10px;
-    padding-left: 10px;
-    margin: auto;
+color: white;
+font-family: var(--fonte0);
+font-size: 1.2em;
+max-width: 600px;
+padding-right: 10px;
+padding-left: 10px;
+margin: auto;
+padding-bottom: 30px;
+text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.267);
+
 }
 
 nav {
-    background-color: var(--cor5);
-    padding: 10px;
-    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.363);
+background-color: var(--cor5);
+padding: 10px;
+box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
 }
 
 nav > a {
-    text-decoration: none;
-    color: #ffffff;
-    padding: 10px;
-    font-weight: bold;
-    border-radius: 5px;
-    transition-duration: 0.5s;
+text-decoration: none;
+color: #ffffff;
+padding: 10px;
+font-weight: bold;
+border-radius: 5px;
+transition-duration: 0.5s;
 }
 
 nav > a:hover{   
-    background-color: var(--cor3);
-    color: var(--cor5);
+background-color: var(--cor3);
+color: var(--cor5);
 }
 
 main{
@@ -154,10 +139,28 @@ main img.pequena{
 
 }
 
+.paragrafo{
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+    line-height: 2em;
+    font-size: 1em;
+}
+
 div.video{
     background-color: var(--cor5);
     margin: 0px -20px 30px -20px;
     padding: 20px;
+    padding-bottom: 59%;
+    position: relative;
+}
+
+div.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 
 aside{
